--- a/css/styles.css
+++ b/css/styles.css
@@ -144,7 +144,6 @@ img {
     display: flex;
     gap: 40px;
 }
-
 /* #endregion header */
 /* #region section solutions */
 .sec-solutions {
@@ -471,6 +470,7 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     margin-left: 16px;
 }
 /* #endregion footer */
+/* #region Modal */
 .backdrop {
     width: 100%;
     height: 100%;
@@ -700,3 +700,4 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .backdrop-submit:focus {
     background-color: #404bbf;
 }
+/* #endregion Modal */
