--- a/css/styles.css
+++ b/css/styles.css
@@ -1053,6 +1053,30 @@ img {
 .backdrop-submit:focus {
     background-color: #404bbf;
 }
+@media screen and (min-width: 320px) {
+    .con-logo {
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .con-icon {
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .text-icon {
+        text-align: center;
+    }
+    .text-subscribe {
+        text-align: center;
+    }
+    .con-subscribe {
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .subscribe-button {
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
 @media screen and (min-width: 768px) {
     .modal {
         width: 408px;
